<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.aggrogahu.popularmovies.MovieDetailActivity">
    <!--COMPLETED (3) have trailer ListView expand height ie. what I think wrap_content should be doing. Fixed by using LinearLayout -->
    <!--COMPLETED (3) add favorites button functionality-->
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tealish"
            android:elevation="5dp"
            android:outlineProvider="bounds"
            android:paddingBottom="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="40dp"
            tools:text="@string/movie_title"
            android:textColor="@color/white"
            android:textSize="35sp" />


        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imageview_content_description"
            android:src="@drawable/interstellar"
            app:layout_constraintEnd_toStartOf="@+id/horizontal_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />


        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/movie_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_date"
            tools:text="@string/rating" />

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/horizontal_middle"
            app:layout_constraintTop_toTopOf="@+id/movie_poster"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:text="@string/movie_description" />

        <include
            android:id="@+id/trailers"
            layout="@layout/trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_description" />
        <include
            android:id="@+id/reviews"
            layout="@layout/reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailers"/>

        <ToggleButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textOn="@string/unmark_as_favorite"
            android:textOff="@string/save_as_favorite"
            app:layout_constraintStart_toStartOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
